--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
+  "name": "distorted-pixels",
+  "version": "1.0.0",
+  "description": "Distorting pixels with DataTexture effect",
+  "scripts": {
+    "start": "parcel index3.html",
+    "build": "parcel build index3.html --public-url ./"
+  },
   "dependencies": {
-    "dat.gui": "^0.7.7",
-    "lil-gui": "^0.16.0",
-    "three": "^0.136.0"
+    "three": "^0.161.0"
   },
   "devDependencies": {
-    "@parcel/transformer-glsl": "^2.1.1",
-    "glslify-bundle": "^5.1.1",
-    "glslify-deps": "^1.3.2"
+    "@parcel/transformer-glsl": "^2.14.4",
+    "parcel": "^2.11.0"
   }
 }
